--- a/public/index.html
+++ b/public/index.html
@@ -8,10 +8,11 @@
 
 <body>
   <!-- Create a div with a id of app that we will render to -->
-  <!-- <div id="app" /> -->
+  <div id="app" />
+  <h1>friends ATS</h1>
   <!-- We also need to run our javascript bundle that webpack created for us  -->
   <!-- <script src="bundle.js" type="text/javascript"></script> -->
-  <h1>friendsAts</h1>
+  <!-- <script src="bundle.js" type="text/javascript"></script> -->
 </body>
 
 </html>
