Implement layout with OneMatchup component

--- a/public/index.html
+++ b/public/index.html
@@ -3,16 +3,17 @@
 
 <head>
   <meta charset="utf-8">
+  <meta name="viewport" content="minimum-scale=1, initial-scale=1, width=device-width" />
   <title>friendsATS</title>
 </head>
 
 <body>
   <!-- Create a div with a id of app that we will render to -->
+  <!-- <h1>friends ATS</h1> -->
   <div id="app" />
-  <h1>friends ATS</h1>
+
   <!-- We also need to run our javascript bundle that webpack created for us  -->
-  <!-- <script src="bundle.js" type="text/javascript"></script> -->
-  <!-- <script src="bundle.js" type="text/javascript"></script> -->
+  <script src="bundle.js" type="text/javascript"></script>
 </body>
 
 </html>
